#1, #3 - Changes in pom.xml and refactor B1005 exercise to Object-Oriented Programming and added functional tests and unit tests

--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,13 @@
             <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.11.0</version> <!-- Certifique-se de usar a mesma versão que o resto do JUnit -->
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
